@@ -1,2 +1,3 @@
 bin/
 /build.properties
+/META-INF
