@@ -12,7 +12,7 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<plugin.version>5.1.81</plugin.version>
+		<plugin.version>5.1.82</plugin.version>
 		<plugin.id>org.infinitest.eclipse</plugin.id>
 		<feature.id>${plugin.id}.feature</feature.id>
 	</properties>
